--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title></title>
 </head>
 <body >
@@ -88,8 +88,8 @@
 </div>
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-<script type="text/javascript" src="../src/inverted-index.js"> </script>
-<script type="text/javascript" src="../src/app.js"> </script>
-<script type="text/javascript" src="../src/angularjs-multiselect.js"> </script>
+<script type="text/javascript" src="src/inverted-index.js"> </script>
+<script type="text/javascript" src="src/app.js"> </script>
+<script type="text/javascript" src="src/angularjs-multiselect.js"> </script>
 </body>
 </html>
