--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -15,7 +15,7 @@
   <script src="../src/inverted-index.js"> </script>
 
   <!-- include spec files here... -->
-  <script src="spec/inverted-index-test.js"></script>
+  <script src="../spec/inverted-index-test.js"></script>
 
 </head>
 
