--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
 
     <title>Inverted Index</title>
 </head>
@@ -51,8 +52,8 @@
                         </div>
                     </div>
                 </form>
-                <div style="">
-                    <div ng-repeat="filename in files.fileNames track by $index">
+                <div>
+                    <div class="index" ng-repeat="filename in files.fileNames track by $index">
                         <label class="uploads" id="filename">{{filename}}</label>
                         <button type="submit" class="btn index" ng-click="files.createIndex($index)" name="create-index">Create index</button>
                     </div>
@@ -117,7 +118,7 @@
     </script>
     <script type="text/javascript" src="src/angularjs-multiselect.js">
     </script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 </body>
 
 </html>
